Fix: Job role dropdown button alignment

--- a/src/app/learner/pages/learner-my-course/learner-my-course.component.scss
+++ b/src/app/learner/pages/learner-my-course/learner-my-course.component.scss
@@ -1683,7 +1683,7 @@ hr {
 }
 ::ng-deep .roleDropdDwnBtn{
   position: absolute !important;
-    right: 59% !important;
+    right: 60% !important;
     bottom: 2% !important;
 }
 .roleBtn{
